Direct reports count on small PersonCard position corrected. Direct reports count bug fixes

--- a/src/main/angular/src/peoplesearch/orgchart.component.scss
+++ b/src/main/angular/src/peoplesearch/orgchart.component.scss
@@ -30,6 +30,10 @@ org-chart {
                 > .avatar {
                   background-image: url('../../images/m_circle-horz-menu.svg');
                 }
+
+                > .reports {
+                  display: none;
+                }
               }
             }
           }
