--- a/src/main/angular/src/peoplesearch/person-card.component.scss
+++ b/src/main/angular/src/peoplesearch/person-card.component.scss
@@ -93,6 +93,10 @@ person-card {
           line-height: 13px;
         }
       }
+
+      > .reports {
+        right: 20px;
+      }
     }
   }
 
